# gpu-llm-systems-lab

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/skills/create-context-and-worklog/: SKILL.md
.claude/skills/create-context-and-worklog/evals/: evals.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md
benchmark/: __init__.py
docs/: agent-assisted-development.md  architecture.md  hardware-matrix.md  methodology.md  profiling-guide.md  research-log-template.md  results-report-template.md  roadmap.md
experiments/: README.md
results/: README.md
tasks/: README.md
tasks/active/: T0001-bootstrap-python-project.md  T0004-refresh-repo-state-docs-after-bootstrap.md
tasks/backlog/: T0002-add-experiment-configuration.md  T0003-add-raw-result-schema.md
tasks/completed/2026/: T0001-bootstrap-python-project.md
tasks/templates/: experiment.md  implementation.md  infrastructure.md  research.md
tests/: test_package.py
